@@ -92,6 +92,9 @@ gint display_clock_dbox()
 		return -1;
 	}
 
+	if(tilp_calc_check_version("2.08", "2.00") < 0)
+		return -1;
+
 	err = ticalcs_calc_get_clock(calc_handle, &tmp_clk);
 	if(err)
 	{
