@@ -8,6 +8,7 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 	- slightly reworked options in popup menus
 	- don't overwrite variable as default behavior for action box
 	- refresh progress bar (bug)
+	- check for AMS/OS version for clock support
 
 - 13/09/2007, version 1.07b (1.1.0, 1.0.7, 1.0.7, 1.0.4): roms
 	- fixed ticables2 library due to bad check of dhahelper
